--- a/styles/styles.css
+++ b/styles/styles.css
@@ -82,6 +82,9 @@
   /* line heights */
   --mt-body-line-height: 1.5rem;
   --mt-button-line-height: 1rem;
+  --mt-footer-line-height-xs: 0.8rem;
+  --mt-footer-line-height-s: 0.9rem;
+  --mt-footer-line-height-m: 1rem;
 
   /* feature font sizes */
   --mt-body-font-size-m: var(--mt-font-size-100);
@@ -95,6 +98,9 @@
   --mt-heading-font-size-s: var(--mt-font-size-100);
   --mt-heading-font-size-xs: var(--mt-font-size-75);
   --mt-input-font-size: var(--mt-font-size-175);
+  --mt-footer-font-size-footer-s: var(--mt-font-size-80);
+  --mt-footer-font-size-footer-m: var(--mt-font-size-90);
+
 
   /* nav height */
   --mt-nav-height: 64px;
